[package]
name = "fc"
version = "0.1.0"
authors = ["Yang Yunfan <yunfan.yang@minerva.kgi.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
regex = "1"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
tempfile= "3.0.2"